// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $10.00
  </p>
</div>
`;

exports[`should render ExpensesSummary with 3 expense 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $20.00
  </p>
</div>
`;
